alteração no arquivo criterioDescription.properties nas linhas:
1.9.1 retirar "sem informar ao usuário"

6.4.1 acrescentar texto ao final da frase: "exceto elementos INPUT com
type BUTTON, SUBMIT, RESET"

--- a/src/main/webapp/WEB-INF/criteriosDescriptions.properties
+++ b/src/main/webapp/WEB-INF/criteriosDescriptions.properties
@@ -12,7 +12,7 @@
 1.3.1=Os níveis de título não foram utilizados
 1.3.2=A hierarquia dos níveis de título está incorreta
 1.3.3=Foi utilizado somente o nível h1
-1.3.4=Presença de mais de 1 cabeçalho <h1>
+1.3.4=Presença de mais de 1 cabeçalho &lt;h1&gt;
 1.3.5=Foram utilizados níveis de título, mas o h1 não o título principal da página
 1.4.1=O bloco de conteúdo não está antes do bloco de menu no HTM
 1.4.2=Presença do atributo tabindex
@@ -32,7 +32,7 @@
 1.7.1=Há links adjacentes sem nenhum tipo de separação ou separação por espaços em branco
 1.8.1=Ausência de divisão de áreas, quando do Uso de HTML 5 
 1.8.2=Ausência de divisão de áreas, quando do Uso de LANDMARKS
-1.9.1=Há link que abre nova página ou aba sem informar ao usuário 
+1.9.1=Há link que abre nova página ou aba
 1.9.2=Há mudança automática no controle do foco do teclado é muito alta
 1.9.3=Há link que remete a um site externo sem avisar no texto do mesmo 
 2.1.1=Há funcionalidade que só funciona pelo mouse
@@ -114,7 +114,7 @@
 6.2.1=Campo sem label associado
 6.2.2=Campo etiquetado, mas a descrição do label não está apropriada
 6.3.1=Presença do elemento FORM  e atributo tabindex
-6.4.1=Presença do elemento FORM  e nos seus elementos a existência do atributo ONCHANGE, ONBLUR,ONFOCUS, ONFORMCHANGE,  ONFORMINPUT , ONINPUT , ONINVALID , ONRESET , ONSELECT, ONSUBMIT,  ONKEYDOWN , ONKEYPRESS, ONKEYUP, ONCLICK
+6.4.1=Presença do elemento FORM  e nos seus elementos a existência do atributo ONCHANGE, ONBLUR,ONFOCUS, ONFORMCHANGE,  ONFORMINPUT , ONINPUT , ONINVALID , ONRESET , ONSELECT, ONSUBMIT,  ONKEYDOWN , ONKEYPRESS, ONKEYUP, ONCLICK exceto elementos INPUT com type BUTTON, SUBMIT, RESET
 6.4.2=Presença do elemento FORM  e nos seus elementos a existência do atributo ONDBLCLICK, ONDRAG, ONDRAGEND, ONDRAGENTER, ONDRAGLEAVE, ONDRAGOVER, ONDRAGSTART, ONDROP, ONMOUSEDOWN, ONMOUSEMOVE, ONMOUSEOUT, ONMOUSEOVER, ONMOUSEUP, ONMOUSEWHEEL, ONSCROLL
 6.4.3=botão que remete automaticamente
 6.5.1=Campo obrigatório informado somente através de cor
