--- a/src/main/webapp/WEB-INF/eselo.properties
+++ b/src/main/webapp/WEB-INF/eselo.properties
@@ -1,6 +1,6 @@
 #url=https://sistemas-treinamento.ifbaiano.edu.br/intg_ases_selo/calcular-nota
-#url=http://189.9.137.162:8080/eselo/calcular-nota
-url=http://localhost:18080/eselo/calcular-nota
+url=http://189.9.137.162:8080/eselo/calcular-nota
+#url=http://localhost:18080/eselo/calcular-nota
 
 #Esconde a nota caso não esteja usando o ESELO	
 #Se atribuir o valor "sem_nota" na chave 'sem_nota', não exibirá a nota	
