Alteração de mapeamento devido a mudanças no arquivo de critérios

--- a/src/main/webapp/WEB-INF/naoexibircodigofonte.properties
+++ b/src/main/webapp/WEB-INF/naoexibircodigofonte.properties
@@ -1,3 +1,7 @@
-notExibCrit=1.3.1 1.5.1 1.5.3 4.4.1 1.1.1 1.1.2
+#notExibCrit=1.3.1 1.5.1 1.5.3 4.4.1 1.1.1 1.1.2
+#notExibCritW3c=1.1.1 1.1.2
+#reqCss=1.1.2
+
+notExibCrit=1.3.1 1.5.1 1.5.4 4.4.1 1.1.1 1.1.2
 notExibCritW3c=1.1.1 1.1.2
 reqCss=1.1.2
