configurado ASES sem ESELO

--- a/src/main/webapp/WEB-INF/eselo.properties
+++ b/src/main/webapp/WEB-INF/eselo.properties
@@ -4,7 +4,7 @@ url=http://189.9.137.162:8080/eselo/calcular-nota
 
 #Esconde a nota caso não esteja usando o ESELO	
 #Se atribuir o valor "sem_nota" na chave 'sem_nota', não exibirá a nota	
-sem_nota=
+sem_nota=sem_nota
 
 #Altera a mensagem caso não esteja usando o ESELO (Nota e Resumo da Avaliação de Acessibilidade)
-mensagem_avaliacao =Nota e Resumo da Avaliação de Acessibilidade
+mensagem_avaliacao =Resumo da Avaliação de Acessibilidade
