--- a/src/main/webapp/WEB-INF/naoexibircodigofonte.properties
+++ b/src/main/webapp/WEB-INF/naoexibircodigofonte.properties
@@ -2,6 +2,6 @@
 #notExibCritW3c=1.1.1 1.1.2
 #reqCss=1.1.2
 
-notExibCrit=1.3.1 1.5.1 1.5.4 4.4.1 1.1.1 1.1.2
-notExibCritW3c=1.1.1 1.1.2
-reqCss=1.1.2
+notExibCrit=1.3.1 1.5.1 1.5.4 4.4.1 1.1.1 1.1.2 1.1.7 1.1.8
+notExibCritW3c=1.1.1 1.1.2 1.1.7 1.1.8
+reqCss=1.1.2 1.1.8
