Adição dos critérios 1.1.7 e 1.1.8 e suas respectivas descrições.

--- a/src/main/webapp/WEB-INF/criteriosDescriptions.properties
+++ b/src/main/webapp/WEB-INF/criteriosDescriptions.properties
@@ -9,6 +9,8 @@
 1.1.4=Presença de CSS(s) interno
 1.1.5=Presença de javascript(s) in-line
 1.1.6=Presença de javascript(s) interno
+1.1.7=Não foram respeitados os Padrões Web HTML
+1.1.8=Não foram respeitados os Padrões Web CSS
 1.2.2=Presença de tags HTML sem atributo e conteúdo de texto
 1.2.3=Presença de tags HTML sem atributo e conteúdo de texto
 1.3.1=Os níveis de título não foram utilizados
