Retirada do texto "links quebrados"

--- a/src/main/webapp/WEB-INF/criteriosDescriptions.properties
+++ b/src/main/webapp/WEB-INF/criteriosDescriptions.properties
@@ -59,7 +59,7 @@
 3.5.11=Links com a mesma descrição que remetem a locais diferentes
 3.5.12=Links que são lidos duas ou mais vezes
 3.5.13=Links com descrição muito longa
-3.5.14=Links que remetem a páginas indisponíveis/inexistentes (links quebrados)
+3.5.14=Links que remetem a páginas indisponíveis/inexistentes
 3.6.1=Imagens sem a declaração do atributo alt
 3.6.2=Imagens com conteúdo sem descrição
 3.6.3=Imagens com descrição igual ao nome do arquivo
