Métodos para envio de email para o govbr através da página de contatos.

--- a/src/main/webapp/WEB-INF/mail.properties
+++ b/src/main/webapp/WEB-INF/mail.properties
@@ -1,4 +1,8 @@
-prop.email.host = 161.148.21.220
-prop.email.port = 465
-prop.email.authuser = 96409975520
-prop.email.authpass = Erdos_200244		
+#com autenticação alterar o valor da chave "prop.email.auth = false" para "prop.email.auth = true" e 
+#atribuir login e senha nas chaves respectivas "prop.email.authuser = ", "prop.email.authpass =".
+prop.email.host = 189.9.150.53
+prop.email.port = 25
+prop.email.authuser = ""
+prop.email.authpass = ""
+prop.email.auth = false
+prop.email.to = govbr@planejamento.gov.br
