Mudança na descrição

--- a/src/main/webapp/WEB-INF/criteriosDescriptions.properties
+++ b/src/main/webapp/WEB-INF/criteriosDescriptions.properties
@@ -75,7 +75,7 @@
 3.11.3=Presença de textos justificados através de folhas de estilo
 3.12.1=Siglas marcadas e sem explicação
 #4.1.2=Foram localizados combinações de cor cuja relação de contraste é inferior a 4,5:1
-4.4.1=Presença de destaque do foco do elemento ativo
+4.4.1=Ausência de destaque do foco do elemento ativo
 5.1.1=Presença de vídeo na página
 5.2.1=Presença de áudio na página
 5.3.1=Presença de vídeo na página
