Adição das recomendações de aviso(3.5.15 e 4.1.3).

--- a/src/main/webapp/WEB-INF/criteriosDescriptions.properties
+++ b/src/main/webapp/WEB-INF/criteriosDescriptions.properties
@@ -60,6 +60,7 @@
 3.5.12=Links que são lidos duas ou mais vezes
 3.5.13=Links com descrição muito longa
 3.5.14=Links que remetem a páginas indisponíveis/inexistentes
+3.5.15=Links que remetem a páginas indisponíveis/inexistentes
 3.6.1=Imagens sem a declaração do atributo alt
 3.6.2=Imagens com conteúdo sem descrição
 3.6.3=Imagens com descrição igual ao nome do arquivo
@@ -76,6 +77,8 @@
 3.12.1=Siglas marcadas e sem explicação
 #4.1.2=Foram localizados combinações de cor cuja relação de contraste é inferior a 4,5:1
 4.4.1=Ausência de destaque do foco do elemento ativo
+4.1.2=Oferecer contraste mínimo entre plano de fundo e primeiro plano
+4.1.3=Oferecer contraste mínimo entre plano de fundo e primeiro plano
 5.1.1=Presença de vídeo na página
 5.2.1=Presença de áudio na página
 5.3.1=Presença de vídeo na página
